force-app/main/default/objects/Story__c/fields/Assistant_Generated_Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Generated_Release_Notes__c</fullName>
    <description>A field to hold a response from an automated service</description>
    <inlineHelpText>This text was generated by AI based on the Story Description. Use at your own risk.</inlineHelpText>
    <label>Assistant Generated Release Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>