force-app/main/default/objects/Story__c/fields/Assistant_Generated_Test_Plan__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Generated_Test_Plan__c</fullName>
    <inlineHelpText>This testing plan was created by AI based on the Story Description field. Use at your own risk.</inlineHelpText>
    <label>Assistant Generated Test Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>